Implement dark mode switcher

--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "@nuxtjs/tailwindcss": "^6.12.1",
     "nuxt": "^3.12.4",
     "vue": "latest"
+  },
+  "devDependencies": {
+    "@nuxtjs/color-mode": "^3.4.2"
   }
 }
